[build-system]
requires = [
  "setuptools>=61.0",    # default
  "wheel",               # also often needed
  "numpy>=1.19.5"        # add numpy here for build-time use
]
build-backend = "setuptools.build_meta" # using setuptool building engine

[project]
name = "ngclearn"
version = "3.0.1"
description = "Simulation software for building and analyzing computational neuroscience models, brain-inspired computing systems, and NeuroAI agents."
authors = [
  {name = "Alexander Ororbia", email = "ago@cs.rit.edu"},
  {name = "William Gebhardt", email = "wdg1351@rit.edu"},
]
readme = "README.md"
keywords = ['python', 'ngc-learn', 'predictive-processing', 'predictive-coding', 'neuro-ai', 
            'jax', 'spiking-neural-networks', 'biomimetics', 'bionics', 'computational-neuroscience']
requires-python = ">=3.10" #3.8
license = "BSD-3-Clause" # {text = "BSD-3-Clause License"}
classifiers=[
  "Development Status :: 4 - Beta", #3 - Alpha", # 5 - Production/Stable
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  #"License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Unix"
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]} ## use classic requirements file

[project.urls]
Homepage = "https://github.com/NACLab/ngc-learn"
Documentation = "https://ngc-learn.readthedocs.io/"
"Lab Page" = "https://www.cs.rit.edu/~ago/nac_lab.html"
Changelog = "https://github.com/NACLab/ngc-learn/blob/main/history.txt"

[tool.setuptools.packages.find]
exclude = ["docs"]
